feat:  working on GAWE-2,GAWE-3,GAWE-25,GAWE-26

--- a/core/core-component/src/main/res/drawable/eye_open.xml
+++ b/core/core-component/src/main/res/drawable/eye_open.xml
@@ -5,7 +5,17 @@
     android:viewportWidth="22"
     android:viewportHeight="18">
   <path
-      android:pathData="M11,0.97C7.196,0.97 3.693,2.943 1.283,6.273C0.721,7.048 0.465,8.042 0.465,8.995C0.465,9.948 0.721,10.942 1.282,11.716C3.693,15.047 7.196,17.02 11,17.02C14.804,17.02 18.307,15.047 20.717,11.717C21.279,10.942 21.535,9.948 21.535,8.995C21.535,8.042 21.279,7.048 20.718,6.274C18.308,2.943 14.804,0.97 11,0.97ZM8.75,9C8.75,7.755 9.755,6.75 11,6.75C12.245,6.75 13.25,7.755 13.25,9C13.25,10.245 12.245,11.25 11,11.25C9.755,11.25 8.75,10.245 8.75,9ZM11,5.25C8.927,5.25 7.25,6.927 7.25,9C7.25,11.073 8.927,12.75 11,12.75C13.073,12.75 14.75,11.073 14.75,9C14.75,6.927 13.073,5.25 11,5.25Z"
-      android:fillColor="#000000"
-      android:fillType="evenOdd"/>
+      android:pathData="M1.036,9.322C0.966,9.115 0.966,8.891 1.035,8.683C2.424,4.51 6.361,1.5 11.001,1.5C15.639,1.5 19.574,4.507 20.964,8.678C21.033,8.885 21.033,9.109 20.965,9.317C19.576,13.49 15.639,16.5 10.999,16.5C6.361,16.5 2.426,13.493 1.036,9.322Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M14,9C14,10.657 12.657,12 11,12C9.343,12 8,10.657 8,9C8,7.343 9.343,6 11,6C12.657,6 14,7.343 14,9Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
 </vector>
