--- a/core/core-component/src/main/res/drawable/onboarding2.xml
+++ b/core/core-component/src/main/res/drawable/onboarding2.xml
@@ -1,4 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="328dp"
     android:height="246dp"
     android:viewportWidth="328"
