fix: update Inter Font to Typography

--- a/core/core-component/src/main/res/drawable/app_logo.xml
+++ b/core/core-component/src/main/res/drawable/app_logo.xml
@@ -1,30 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="28dp"
-    android:height="28dp"
-    android:viewportWidth="28"
-    android:viewportHeight="28">
-  <group>
-    <clip-path
-        android:pathData="M0,0h28v28h-28z"/>
-    <path
-        android:pathData="M28,14C28,16.769 27.179,19.476 25.641,21.778C24.102,24.08 21.916,25.875 19.358,26.934C16.799,27.994 13.984,28.271 11.269,27.731C8.553,27.191 6.058,25.857 4.101,23.899C2.143,21.942 0.809,19.447 0.269,16.731C-0.271,14.016 0.006,11.201 1.066,8.642C2.125,6.084 3.92,3.898 6.222,2.359C8.524,0.821 11.231,-0 14,0V14H28Z"
-        android:fillColor="#6941C6"/>
-    <path
-        android:pathData="M28,14C28,17.713 26.525,21.274 23.899,23.899C21.274,26.525 17.713,28 14,28C10.287,28 6.726,26.525 4.101,23.899C1.475,21.274 0,17.713 0,14H14H28Z"
-        android:fillColor="#7F56D9"/>
-    <path
-        android:pathData="M28,14C28,15.839 27.638,17.659 26.934,19.358C26.231,21.056 25.199,22.6 23.899,23.899C22.6,25.199 21.056,26.231 19.358,26.934C17.659,27.638 15.839,28 14,28V14H28Z"
-        android:fillColor="#9E77ED"/>
-    <path
-        android:pathData="M27.364,7C27.364,10.514 24.515,13.363 21,13.363C17.486,13.363 14.637,10.514 14.637,7C14.637,3.485 17.486,0.636 21,0.636C24.515,0.636 27.364,3.485 27.364,7Z"
-        android:fillColor="#7F56D9"/>
-    <path
-        android:pathData="M24.182,5.091L20.244,8.909L18.455,7.173"
-        android:strokeLineJoin="round"
-        android:strokeWidth="1.5"
-        android:fillColor="#00000000"
-        android:strokeColor="#ffffff"
-        android:strokeLineCap="square"/>
-  </group>
+    android:width="64dp"
+    android:height="65dp"
+    android:viewportWidth="64"
+    android:viewportHeight="65">
+  <path
+      android:pathData="M0,16.382C0,7.545 7.163,0.382 16,0.382H48C56.837,0.382 64,7.545 64,16.382V48.382C64,57.218 56.837,64.382 48,64.382H16C7.163,64.382 0,57.218 0,48.382V16.382Z"
+      android:fillColor="#1041B7"/>
+  <path
+      android:pathData="M20.998,16.44C23.416,16.44 25.376,18.399 25.376,20.817V37.944C25.376,40.094 25.905,41.749 26.963,42.91C28.021,44.07 29.574,44.651 31.622,44.651C33.67,44.651 35.241,44.07 36.333,42.91C37.425,41.749 37.971,40.094 37.971,37.944V30.925C37.971,27.283 42.158,25.234 45.034,27.468C46.102,28.297 46.726,29.573 46.726,30.925V37.892C46.726,41.101 46.044,43.814 44.678,46.033C43.313,48.252 41.47,49.924 39.149,51.051C36.862,52.177 34.302,52.74 31.469,52.74C28.636,52.74 26.093,52.194 23.84,51.102C21.621,49.975 19.864,48.303 18.566,46.084C17.269,43.832 16.621,41.101 16.621,37.892V20.817C16.621,18.399 18.581,16.44 20.998,16.44Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M46.4,20.782C46.4,23.212 44.43,25.182 42,25.182C39.57,25.182 37.6,23.212 37.6,20.782C37.6,18.352 39.57,16.382 42,16.382C44.43,16.382 46.4,18.352 46.4,20.782Z"
+      android:fillColor="#29CAE1"/>
 </vector>
